tests/equals/equals.exp
Error ---------------------------------------------------------------------------------------------------- equals.js:7:2

Cannot compare number [1] to string [2]. [invalid-compare]

   equals.js:7:2
   7| (1 == ""); // error
       ^ [1]

References:
   equals.js:7:7
   7| (1 == ""); // error
            ^^ [2]


Error ---------------------------------------------------------------------------------------------------- equals.js:8:2

Cannot compare string [1] to number [2]. [invalid-compare]

   equals.js:8:2
   8| ("" == 1); // error
       ^^ [1]

References:
   equals.js:8:8
   8| ("" == 1); // error
             ^ [2]



Found 2 errors
